--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
+    "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.1",
     "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-splash-screen": "3.0.6",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.0-alpha.42"
   },
