--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.5",
     "native-base": "^2.13.8",
     "react": "16.9.0",
