--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-splash-screen": "3.0.6",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.0-alpha.42"
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^2.0.0-alpha.42",
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
