--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "pod": "cd ios && pod install && cd .."
+    "pod": "cd ios && pod install && cd ..",
+    "poda": "cd android && ./gradlew clean && cd .."
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
@@ -20,7 +21,6 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.1",
     "react-native-screens": "^2.0.0-alpha.22",
-    "react-native-splash-screen": "3.0.6",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.0.0-alpha.42",
