--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
     "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules"]
